[package]
name = "lowly"
version = "0.1.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
edition = "2018"

[dependencies]
tokio-core = "0.1.17"
futures = "0.1.26"
mse_fmp4 = { path = "../mse_fmp4" }
rtp-rs = "0.3.0"
mpeg2ts-reader = { path = "../mpeg2ts-reader" }
h264-reader = { path = "../h264-reader" }
hyper = "0.12"
byteorder = "1.3"
#ffmpeg-sys = "3.4"
hexdump = "0.1.0"
adts-reader = { path = "../adts-reader" }

[profile.release]
debug = true
