[package]
name = "lowly"
version = "0.1.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
edition = "2018"

[dependencies]
tokio-core = "0.1.17"
tokio-sync = "0.1.6"
futures = "0.1.26"
mse_fmp4 = { git = "https://github.com/dholroyd/mse_fmp4.git" }
rtp-rs = "0.3.0"
mpeg2ts-reader = "0.13.0"
h264-reader = "0.3.0"
hyper = "0.12"
byteorder = "1.3"
#ffmpeg-sys = "3.4"
hexdump = "0.1.0"
adts-reader = "0.3"
itertools = "0.4.19"
url = "1.7.2"
chrono = "0.4.6"

[profile.release]
debug = true
overflow-checks = true
